Added SAE configuration parameters to wpa_supplicant.conf

--- a/wpa_supplicant/wpa_supplicant.conf
+++ b/wpa_supplicant/wpa_supplicant.conf
@@ -557,6 +557,34 @@ fast_reauth=1
 #		text format uses about 2.5 times the size of minimal binary
 #		format)
 #
+# SAE variables:
+# sae_group_list: A prioritized list of which elliptic curve groups to use.
+# Currently the only groups currently supported are 19, 20, 21, 25 and 26 from
+# the IANA registry of RFC 2409's "Diffie-Hellman groups".
+#
+# sae_retrans: the amount of seconds to wait before retransmitting.  Default is
+# 	3.
+# sae_thresh: the number of open connections allowed before anti-clogging tokens
+# 	are demanded. Default is 5.
+#
+# sae_blacklist: how long to ignore peers which fail authentication. Default is
+# 	30 (seconds).
+#
+# sae_debug: a bitmask to selectively enable/disable debugging.  error
+# 	debugging is bit 0x01, protocol messaging is bit 0x02, state machine
+# 	transitions are bit 0x04, crypto debugging is bit 0x08, and very verbose
+# 	crypto debugging can be turned on with bit 0x10.
+#
+# sae_lifetime: how long a negotiated PMK is valid for. At then end
+#	of this period the key will be deleted and the peer
+#	will be authenticated again (if it's still around).
+#
+# sae_giveup: the number of errors and/or state-machine resyncronizations
+#	allowed before the conversation is abandoned. Default
+#	is 5.
+#
+# SAE uses the psk field for its password.
+#
 # wpa_supplicant supports number of "EAP workarounds" to work around
 # interoperability issues with incorrectly behaving authentication servers.
 # These are enabled by default because some of the issues are present in large
@@ -882,6 +910,7 @@ network={
 	pairwise=CCMP
 	group=CCMP
 	psk="This is a secret place"
+	sae_group_list=19 26 21 25 20
 }
 
 # Example configuration showing how to use an inlined blob as a CA certificate
