--- a/wpa_supplicant/wpa_supplicant.conf
+++ b/wpa_supplicant/wpa_supplicant.conf
@@ -96,7 +96,8 @@ eapol_version=1
 #    parameters (e.g., WPA IE generation); this mode can also be used with
 #    non-WPA drivers when using IEEE 802.1X mode; do not try to associate with
 #    APs (i.e., external program needs to control association). This mode must
-#    also be used when using wired Ethernet drivers.
+#    also be used when using wired Ethernet drivers.  This is the recommended
+#    setting for mesh, given that it does not require scanning.
 # 2: like 0, but associate with APs using security policy and SSID (but not
 #    BSSID); this can be used, e.g., with ndiswrapper and NDIS drivers to
 #    enable operation with hidden SSIDs and optimized roaming; in this mode,
@@ -273,18 +274,22 @@ fast_reauth=1
 # 0 = infrastructure (Managed) mode, i.e., associate with an AP (default)
 # 1 = IBSS (ad-hoc, peer-to-peer)
 # 2 = AP (access point)
+# 3 = P2P Group Owner
+# 4 = P2P Group Formation
+# 5 = Mesh (802.11s)
 # Note: IBSS can only be used with key_mgmt NONE (plaintext and static WEP)
 # and key_mgmt=WPA-NONE (fixed group key TKIP/CCMP). WPA-None requires
 # following network block options:
 # proto=WPA, key_mgmt=WPA-NONE, pairwise=NONE, group=TKIP (or CCMP, but not
 # both), and psk must also be set.
 #
-# frequency: Channel frequency in megahertz (MHz) for IBSS, e.g.,
+# frequency: Channel frequency in megahertz (MHz) for IBSS, or mesh e.g.,
 # 2412 = IEEE 802.11b/g channel 1. This value is used to configure the initial
-# channel for IBSS (adhoc) networks. It is ignored in the infrastructure mode.
-# In addition, this value is only used by the station that creates the IBSS. If
-# an IBSS network with the configured SSID is already present, the frequency of
-# the network will be used instead of this configured value.
+# channel for IBSS (adhoc) or mesh networks. It is ignored in the
+# infrastructure mode.  In addition, this value is only used by the station
+# that creates the IBSS. If an IBSS network with the configured SSID is already
+# present, the frequency of the network will be used instead of this configured
+# value.
 #
 # scan_freq: List of frequencies to scan
 # Space-separated list of frequencies in MHz to scan when searching for this
@@ -865,6 +870,18 @@ network={
 	# Optional PIN configuration; this can be left out and PIN will be
 	# asked through the control interface
 	pin="1234"
+}
+
+# Mesh network with SAE authentication
+network={
+	ssid="test mesh"
+	mode=5
+	frequency=2412
+	proto=RSN
+	key_mgmt=SAE
+	pairwise=CCMP
+	group=CCMP
+	psk="This is a secret place"
 }
 
 # Example configuration showing how to use an inlined blob as a CA certificate
